Fixed a z-index issue in the highlight

--- a/src/sass/layouts/_layouts.content.scss
+++ b/src/sass/layouts/_layouts.content.scss
@@ -10,12 +10,12 @@
   background: url('background-highlight.jpg') no-repeat center center;
   background-size: cover;
   @include breakpoint(md) {
-    z-index: -1;
+    z-index: 0;
     margin-top: -11rem !important;
     padding-top: 9rem !important;
   }
   @include breakpoint(lg) {
-    z-index: -1;
+    z-index: 0;
     margin-top: -13rem !important;
     padding-top: 11rem !important;
   }
